--- a/index.html
+++ b/index.html
@@ -1,12 +1,257 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
   </head>
+
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="gllacy-link">
+          <img src="#" alt="Логотип Глэйси.">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="catalog.html">Каталог</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">Доставка и оплата</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">О компании</a>
+          </li>
+        </ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+        <div class="user-menu">
+          <a class="contacts-phones" href="tel:+78005558628">Тел.: +7 (800) 555-86-28</a>
+          <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+            <button class="searh" type="button">открыть</button>
+            <label for="search"></label>
+            <input class="visually-hidden" type="text" id="search">
+          </form>
+          <button class="button-auth button-login" type="button">Вход</button>
+          <a class="cart-link" href="#">2 товара</a>
+        </div>
+      </nav>
+    </header>
 
+    <main class="main-index">
+      <h1 class="visually-hidden">Интернет-магазин мороженого Глэйси.</h1>
+      <section class="promo-slider">
+        <h2 class="visually-hidden">Популярное мороженое.</h2>
+        <ul class="slider-list">
+          <li class="slider-list--item">
+            <h3 class="slider-tittle">Нежный пломбир с клубничным джемом</h3>
+            <p class="subtittle-text">Натуральное мороженое из свежих сливок
+              и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
+            <img class="slider-image" src="#" alt="Рожок с красным топпингом на белом пломбире." width="306"
+              height="507">
+          </li>
+          <li class="slider-list--item">
+            <h3 class="slider-tittle">Сливочное мороженое со вкусом банана</h3>
+            <p class="subtittle-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение
+              даже в самый жаркий летний день.</p>
+            <img class="slider-image" src="#" alt="Рожок с тремя шариками сливочного мороженого" width="306"
+              height="507">
+          </li>
+          <li class="slider-list--item">
+            <h3 class="slider-tittle">Карамельный пломбир с маршмеллоу</h3>
+            <p class="subtittle-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца
+              сладкоежек всех возрастов.</p>
+            <img class="slider-image" src="#" alt="Рожок из четырех шариков украшенный листиком мяты." width="306"
+              height="507">
+          </li>
+        </ul>
+        <a class="order-button" href="#">Заказать</a>
+        <button class="slider-button slider-button-next" type="button">
+          <span class="visually-hidden">Предыдущий слайд.</span>
+        </button>
+        <button class="slider-button slider-button-next" type="button">
+          <span class="visually-hidden">Следующий слайд.</span>
+        </button>
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+              <span class="visually-hidden">Первый слайд.</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">Второй слайд.</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">Третий слайд.</span>
+            </button>
+          </li>
+        </ol>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Ссылка на телеграм.</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Ссылка на вконтакте.</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ссылка на ютуб.</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="bonus">
+        <h2 class="bonus-tittle">Заказывайте мороженое и получайте подарки!</h2>
+        <div class="bonus-raspberry">
+          <h3 class="raspberry-tittle">Малинка даром!</h3>
+          <p>При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <a class="gift-button" href="#">Хочу подарок</a>
+        </div>
+        <div class="bonus-marshmellow">
+          <h3 class="raspberry-tittle">Маршмеллоу даром!</h3>
+          <p>При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+          <a class="gift-button" href="#">Хочу подарок</a>
+        </div>
+      </section>
+
+      <section class="most-popular">
+        <h2 class="most-popular-tittle">Попробуйте самые популярные вкусы нашего мороженого</h2>
+        <ul class="popular-list">
+          <li class="popular-list-item">
+            <img src="#" alt="ярко-красный шарик мороженого." width="168" height="168">
+            <h3 class="icecream-name">Малинка</h3>
+            <p>Сливочное мороженое с малиновым джемом</p>
+            <span class="popular-price">310 ₽/кг</span>
+            <button class="add-to-cart" type="button"></button>
+          </li>
+          <li class="popular-list-item">
+            <img src="#" alt="Зеленый шарик мороженого с шоколданой крошкой." width="168" height="168">
+            <h3 class="icecream-name">Фисташка</h3>
+            <p>Фисташковый пломбир с кусочками шоколада</p>
+            <span class="popular-price">340 ₽/кг</span>
+            <button class="add-to-cart" type="button"></button>
+          </li>
+          <li class="popular-list-item">
+            <img src="#" alt="Шарик Крем-брюле с прослойкой черничного джема." width="168" height="168">
+            <h3 class="icecream-name">Черника</h3>
+            <p>Крем-брюле с черничным джемом </p>
+            <span class="popular-price">330 ₽/кг</span>
+            <button class="add-to-cart" type="button"></button>
+          </li>
+          <li class="popular-list-item">
+            <img src="#" alt="Шарик мороженого голубого цвета с разноцветной крошкой." width="168" height="168">
+            <h3 class="icecream-name">Бабл-гам</h3>
+            <p>Ванильный пломбир со сладкой посыпкой</p>
+            <span class="popular-price">320 ₽/кг</span>
+            <button class="add-to-cart" type="button"></button>
+          </li>
+        </ul>
+      </section>
+
+      <section class="advantages">
+        <h2 class="advantages-tittle">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного
+          производства на развес</h2>
+        <ul class="advantages-list">
+          <li class="agvantages-item advantages-technology">
+            <p>Всё наше мороженое изготавливается на собственном производстве с использованием современного
+              оборудования и проверенных временем технологий.</p>
+          </li>
+          <li class="agvantages-item advantages-farm">
+            <p>Закупка ингредиентов производится только
+              у проверенных фермерских хозяйств, с которыми
+              нас связывает долговременное сотрудничество.</p>
+          </li>
+          <li class="agvantages-item advantages-ingredients">
+            <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты
+              и добавки произведены из натурального сырья.</p>
+          </li>
+          <li class="agvantages-item advantages-termopack">
+            <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты
+              и добавки произведены из натурального сырья.</p>
+          </li>
+        </ul>
+      </section>
+      <div class="info">
+        <div class="blog">
+          <p>Новое в нашем блоге</p>
+          <p>10 способов сервировки фруктовых щербетов к столу</p>
+        </div>
+        <div class="subscribe">
+          <p>Подпишитесь на нашу сладкую рассылку и будьте всегда
+            в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды.
+            Честно =)</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label class="visually-hidden" for="newsletter-email">Email</label>
+            <input class="field" type="email" placeholder="email@example.com" name="newsletter-email"
+              id="newsletter-email" required>
+            <button class="button button-newsletter" type="submit">Отправить</button>
+          </form>
+        </div>
+      </div>
+      <section class="delivery">
+        <div class="delivery-content">
+          <h2>Доставка любимого мороженого на дом</h2>
+          <p>Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на
+            дом, и курьер привезёт вам ваш заказ в течение часа!</p>
+        </div>
+        <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
+        <span class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</span>
+        <label for="date" class="delivery-label">Дата</label>
+        <input class="delivery-input" id="date">
+        <label for="tel" class="delivery-label">Телефон</label>
+        <input class="delivery-input" id="tel">
+        <label for="address" class="delivery-label">Адрес</label>
+        <input class="delivery-input" id="address">
+        <button class="delivery-form-button" type="submit">Отправить</button>
+        </form>
+      </section>
+      <section class="feedback">
+        <h2 class="visually-hidden">Обратная связь.</h2>
+        <div class="feedback-wrapper">
+          <address class="contacts-address">
+            <span class="feedback-tittle">Адрес главного офиса и офлайн-магазина:</span>
+            <p class="feedback-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+            <p class="feedback-phone" href="tel:+78128121212">+7 (812) 812-12-12</p>
+          </address>
+          <a class="feedback-link" href="#">Форма обратной связи</a>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <ul class="social-list footer-social-list">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Ссылка на телеграм.</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Ссылка на вконтакте.</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Ссылка на ютуб.</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="footer-about-list">
+        <li class="footer-about-item is-current">Для поставщиков</li>
+        <li class="footer-about-item">Наши документы</li>
+        <li class="footer-about-item">О производстве</li>
+        <li class="footer-about-item">Экологические стандарты</li>
+      </ul>
+      <a class="made-by-link" href="https://htmlacademy.ru/ ">
+      <img src="/images/made-by.svg" width="193" height="53" alt="логотип академии.">
+      </a>
+    </footer>
   </body>
+
 </html>
