разметка каталога и картинки

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="gllacy-link">
-          <img src="#" alt="Логотип Глэйси.">
+          <img src="/images/logo.svg" alt="Логотип Глэйси." width="137" height="56">
         </a>
         <ul class="navigation-list">
           <li class="navigation-list-item">
@@ -46,21 +46,21 @@
             <h3 class="slider-tittle">Нежный пломбир с клубничным джемом</h3>
             <p class="subtittle-text">Натуральное мороженое из свежих сливок
               и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
-            <img class="slider-image" src="#" alt="Рожок с красным топпингом на белом пломбире." width="306"
+            <img class="slider-image" src="/images/slider-strawberry.png" alt="Рожок с красным топпингом на белом пломбире." width="306"
               height="507">
           </li>
           <li class="slider-list--item">
             <h3 class="slider-tittle">Сливочное мороженое со вкусом банана</h3>
             <p class="subtittle-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение
               даже в самый жаркий летний день.</p>
-            <img class="slider-image" src="#" alt="Рожок с тремя шариками сливочного мороженого" width="306"
+            <img class="slider-image" src="/images/slider-banana.png" alt="Рожок с тремя шариками сливочного мороженого." width="306"
               height="507">
           </li>
           <li class="slider-list--item">
             <h3 class="slider-tittle">Карамельный пломбир с маршмеллоу</h3>
             <p class="subtittle-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца
               сладкоежек всех возрастов.</p>
-            <img class="slider-image" src="#" alt="Рожок из четырех шариков украшенный листиком мяты." width="306"
+            <img class="slider-image" src="/images/slider-marshmallow.png" alt="Рожок из четырех шариков украшенный листиком мяты." width="306"
               height="507">
           </li>
         </ul>
@@ -125,28 +125,28 @@
         <h2 class="most-popular-tittle">Попробуйте самые популярные вкусы нашего мороженого</h2>
         <ul class="popular-list">
           <li class="popular-list-item">
-            <img src="#" alt="ярко-красный шарик мороженого." width="168" height="168">
+            <img src="/images/catalog/malinka.jpg" alt="ярко-красный шарик мороженого." width="168" height="168">
             <h3 class="icecream-name">Малинка</h3>
             <p>Сливочное мороженое с малиновым джемом</p>
             <span class="popular-price">310 ₽/кг</span>
             <button class="add-to-cart" type="button"></button>
           </li>
           <li class="popular-list-item">
-            <img src="#" alt="Зеленый шарик мороженого с шоколданой крошкой." width="168" height="168">
+            <img src="/images/catalog/pistachio.jpg" alt="Зеленый шарик мороженого с шоколданой крошкой." width="168" height="168">
             <h3 class="icecream-name">Фисташка</h3>
             <p>Фисташковый пломбир с кусочками шоколада</p>
             <span class="popular-price">340 ₽/кг</span>
             <button class="add-to-cart" type="button"></button>
           </li>
           <li class="popular-list-item">
-            <img src="#" alt="Шарик Крем-брюле с прослойкой черничного джема." width="168" height="168">
+            <img src="/images/catalog/creme.jpg" alt="Шарик Крем-брюле с прослойкой черничного джема." width="168" height="168">
             <h3 class="icecream-name">Черника</h3>
             <p>Крем-брюле с черничным джемом </p>
             <span class="popular-price">330 ₽/кг</span>
             <button class="add-to-cart" type="button"></button>
           </li>
           <li class="popular-list-item">
-            <img src="#" alt="Шарик мороженого голубого цвета с разноцветной крошкой." width="168" height="168">
+            <img src="/images/catalog/bubble-gum.jpg" alt="Шарик мороженого голубого цвета с разноцветной крошкой." width="168" height="168">
             <h3 class="icecream-name">Бабл-гам</h3>
             <p>Ванильный пломбир со сладкой посыпкой</p>
             <span class="popular-price">320 ₽/кг</span>
