--- a/catalog.html
+++ b/catalog.html
@@ -9,8 +9,8 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a class="gllacy-link">
-          <img src="#" alt="Логотип Глэйси.">
+        <a class="gllacy-link" href="index.html">
+          <img src="/images/logo.svg" alt="Логотип Глэйси." width="137" height="56">
         </a>
         <ul class="navigation-list">
           <li class="navigation-list-item">
@@ -37,36 +37,321 @@
       </nav>
     </header>
     <main>
+      <header class="under-header">
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="#">Каталог</a>
+          </li>
+        </ul>
+        <h1 class="inner-header-tittle">Сливочное мороженое</h1>
+      </header>
+      <section class="options">
+        <div class="sorting">
+          <label class="sorting-tittle">Сортировка:
+            <select class="select-control" aria-label="Сортировка">
+              <option value="popular">по пулярности</option>
+              <option value="cheap">дешёвые</option>
+              <option value="expensive">дорогие</option>
+            </select>
+          </label>
+        </div>
+        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-tittle">Цена:</legend>
+            <div class="range">
+              <div class="range-scale">
+                <div class="range-bar">
+                  <button type="button" class="range-toggle toggle-min">
+                    <span class="visually-hidden">Изменить минимальную цену.</span>
+                  </button>
+                  <button type="button" class="range-toggle toggle-max">
+                    <span class="visually-hidden">Изменить максимальную цену.</span>
+                  </button>
+                </div>
 
-  </main>
-  <footer class="page-footer">
-    <ul class="social-list footer-social-list">
-      <li class="footer-social-item">
-        <a class="footer-social-link" href="https://t.me/htmlacademy">
-          <span class="visually-hidden">Ссылка на телеграм.</span>
+                <div class="range-wrapper-inputs">
+                  <label class="catalog-filter-label">
+                    <input class="range-bar-input input-min" type="number" name="min-price" placeholder="100 ₽">
+                  </label>
+                  <span>-</span>
+                  <label class="catalog-filter-label catalog-filter-label-max">
+                    <input class="range-bar-input input-max" type="number" name="max-price" placeholder="500 ₽">
+                  </label>
+                </div>
+              </div>
+            </div>
+          </fieldset>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-tittle">Жирность:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="product-group" value="0%">
+                  <span class="control-mark"></span>
+                  <span class="control-label">0%</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="product-group" value="below-10%"
+                    checked>
+                  <span class="control-mark"></span>
+                  <span class="control-label">до 10%</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="product-group" value="below-30%">
+                  <span class="control-mark"></span>
+                  <span class="control-label">до 30%</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="radio" name="product-group" value="under-30%">
+                  <span class="control-mark"></span>
+                  <span class="control-label">выше 30%</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-tittle">Наполнители:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="chokolate" checked>
+                  <span class="control-checkbox"></span>
+                  <span class="control-label">шоколадные</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="sugar" checked>
+                  <span class="control-checkbox"></span>
+                  <span class="control-label">сахарные посыпки</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="fruits">
+                  <span class="control-checkbox"></span>
+                  <span class="control-label">фрукты</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="syrup">
+                  <span class="control-checkbox"></span>
+                  <span class="control-label">сиропы</span>
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="visually-hidden control-input" type="checkbox" name="jam">
+                  <span class="control-checkbox"></span>
+                  <span class="control-label">джемы</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="catalog-filter-submit" type="submit">Применить</button>
+        </form>
+      </section>
+      <div class="product-wrapper">
+        <ul class="product-list">
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/malinka.jpg" width="168" height="168">
+              <p class="product-name">Малинка</p>
+              <span class="product-text">Сливочное мороженое с малиновым джемом</span>
+              <span class="product-price">310 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/pistachio.jpg" width="168" height="168">
+              <p class="product-name">Фисташка</p>
+              <span class="product-text">Фисташковый пломбир с кусочками шоколада</span>
+              <span class="product-price">340 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/chernika.jpg" width="168" height="168">
+              <p class="product-name">Черника</p>
+              <span class="product-text">Крем-брюле с черничным джемом</span>
+              <span class="product-price">330 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/bubble-gum.jpg" width="168" height="168">
+              <p class="product-name">Бабл-гам</p>
+              <span class="product-text">Ванильный пломбир со сладкой посыпкой</span>
+              <span class="product-price">320 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/ejevika.jpg" width="168" height="168">
+              <p class="product-name">Ежевика</p>
+              <span class="product-text">Сливочное мороженое с ежевичным джемом</span>
+              <span class="product-price">330 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/banana.jpg" width="168" height="168">
+              <p class="product-name">Банан</p>
+              <span class="product-text">Сливочный пломбир с банановым вкусом</span>
+              <span class="product-price">340 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/chocolate.jpg" width="168" height="168">
+              <p class="product-name">Шоколадка</p>
+              <span class="product-text">Классический шоколадный пломбир</span>
+              <span class="product-price">270 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/strawberry.jpg" width="168" height="168">
+              <p class="product-name">Клубничка</p>
+              <span class="product-text">Сливочный пломбир с клубничным вкусом</span>
+              <span class="product-price">300 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/lemon.jpg" width="168" height="168">
+              <p class="product-name">Лимон</p>
+              <span class="product-text">Освежающий лимонный сорбет</span>
+              <span class="product-price">310 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/mentol.jpg" width="168" height="168">
+              <p class="product-name">Ментол</p>
+              <span class="product-text">Сливочный пломбир с ментоловым сиропом</span>
+              <span class="product-price">320 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/nut.jpg" width="168" height="168">
+              <p class="product-name">Орешек</p>
+              <span class="product-text">Фисташковый пломбир с шоколадным сиропом</span>
+              <span class="product-price">360 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+          <li class="product-list-item">
+            <a class="product-link" href="#">
+              <img class="product-image" src="/images/catalog/creme.jpg" width="168" height="168">
+              <p class="product-name">Крем-брюле</p>
+              <span class="product-text">Классическое крем-брюле </span>
+              <span class="product-price">280 ₽/кг</span>
+              <button class="add-to-cart" type="button">
+                <span class="visually-hidden">добавить товар в корзину.</span>
+              </button>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <button class="pagination-show-more" type="button">Показать еще</button>
+      <div class="pagination-wrapper">
+        <a class="pagination-button" href="#">
+          <span class="visually-hidden">предыдущая страница.</span>
         </a>
-      </li>
-      <li class="footer-social-item">
-        <a class="footer-social-link" href="https://vk.com/htmlacademy">
-          <span class="visually-hidden">Ссылка на вконтакте.</span>
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-current">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">5</a>
+          </li>
+        </ul>
+        <a class="pagination-button" href="#">
+          <span class="visually-hidden">следующая страница.</span>
         </a>
-      </li>
-      <li class="footer-social-item">
-        <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
-          <span class="visually-hidden">Ссылка на ютуб.</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="footer-about-list">
-      <li class="footer-about-item is-current">Для поставщиков</li>
-      <li class="footer-about-item">Наши документы</li>
-      <li class="footer-about-item">О производстве</li>
-      <li class="footer-about-item">Экологические стандарты</li>
-    </ul>
-    <a class="made-by-link" href="https://htmlacademy.ru/ ">
-    <img src="/images/made-by.svg" width="193" height="53" alt="логотип академии.">
-    </a>
-  </footer>
-</body>
+      </div>
+    </main>
+    <footer class="page-footer">
+      <ul class="social-list footer-social-list">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Ссылка на телеграм.</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Ссылка на вконтакте.</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Ссылка на ютуб.</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="footer-about-list">
+        <li class="footer-about-item is-current">Для поставщиков</li>
+        <li class="footer-about-item">Наши документы</li>
+        <li class="footer-about-item">О производстве</li>
+        <li class="footer-about-item">Экологические стандарты</li>
+      </ul>
+      <a class="made-by-link" href="https://htmlacademy.ru/ ">
+        <img src="/images/made-by.svg" width="193" height="53" alt="логотип академии.">
+      </a>
+    </footer>
+  </body>
 
 </html>
