--- a/index.html
+++ b/index.html
@@ -4,35 +4,39 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a class="gllacy-link">
-          <img src="/images/logo.svg" alt="Логотип Глэйси." width="137" height="56">
-        </a>
-        <ul class="navigation-list">
-          <li class="navigation-list-item">
-            <a class="navigation-link" href="catalog.html">Каталог</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-link" href="#">Доставка и оплата</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-link" href="#">О компании</a>
-          </li>
-        </ul>
-
-        <div class="user-menu">
-          <a class="contacts-phones" href="tel:+78005558628">Тел.: +7 (800) 555-86-28</a>
-          <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
-            <button class="searh" type="button">открыть</button>
-            <label for="search"></label>
-            <input class="visually-hidden" type="text" id="search">
-          </form>
-          <button class="button-auth button-login" type="button">Вход</button>
-          <a class="cart-link" href="#">2 товара</a>
+        <div class="navigation-wrapper">
+          <a class="gllacy-link">
+            <img src="/images/logo.svg" alt="Логотип Глэйси." width="137" height="56">
+          </a>
+          <div class="navigation-left">
+            <ul class="navigation-list">
+              <li class="navigation-list-item">
+                <a class="navigation-link" href="catalog.html">Каталог</a>
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-link" href="#">Доставка и оплата</a>
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-link" href="#">О компании</a>
+              </li>
+            </ul>
+          </div>
+          <div class="user-menu">
+            <a class="contacts-phone" href="tel:+78005558628">+7 (800) 555-86-28</a>
+            <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+              <button class="searh" type="button">открыть</button>
+              <label for="search"></label>
+              <input class="visually-hidden" type="text" id="search">
+            </form>
+            <button class="button-auth button-login" type="button">Вход</button>
+            <a class="navigation-link cart-link" href="#">2 товара</a>
+          </div>
         </div>
       </nav>
     </header>
@@ -43,28 +47,30 @@
         <h2 class="visually-hidden">Популярное мороженое.</h2>
         <ul class="slider-list">
           <li class="slider-list--item">
-            <h3 class="slider-tittle">Нежный пломбир с клубничным джемом</h3>
+            <h3 class="tittle slider-tittle">Нежный пломбир с клубничным джемом</h3>
             <p class="subtittle-text">Натуральное мороженое из свежих сливок
               и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
-            <img class="slider-image" src="/images/slider-strawberry.png" alt="Рожок с красным топпингом на белом пломбире." width="306"
-              height="507">
+            <button class="order-button" type="button">Заказать</button>
+            <img class="slider-image" src="/images/slider-strawberry.png"
+              alt="Рожок с красным топпингом на белом пломбире." width="306" height="507">
           </li>
           <li class="slider-list--item">
-            <h3 class="slider-tittle">Сливочное мороженое со вкусом банана</h3>
+            <h3 class="tittle slider-tittle">Сливочное мороженое со вкусом банана</h3>
             <p class="subtittle-text">Сливочное мороженое с ярким банановым вкусом подарит вам свежесть и наслаждение
               даже в самый жаркий летний день.</p>
-            <img class="slider-image" src="/images/slider-banana.png" alt="Рожок с тремя шариками сливочного мороженого." width="306"
-              height="507">
+            <button class="order-button" type="button">Заказать</button>
+            <img class="slider-image" src="/images/slider-banana.png"
+              alt="Рожок с тремя шариками сливочного мороженого." width="306" height="507">
           </li>
           <li class="slider-list--item">
-            <h3 class="slider-tittle">Карамельный пломбир с маршмеллоу</h3>
+            <h3 class="tittle slider-tittle">Карамельный пломбир с маршмеллоу</h3>
             <p class="subtittle-text">Необычный сладкий десерт с карамельным топпингом и кусочками зефира завоюет сердца
               сладкоежек всех возрастов.</p>
-            <img class="slider-image" src="/images/slider-marshmallow.png" alt="Рожок из четырех шариков украшенный листиком мяты." width="306"
-              height="507">
+            <button class="order-button" type="button">Заказать</button>
+            <img class="slider-image" src="/images/slider-marshmallow.png"
+              alt="Рожок из четырех шариков украшенный листиком мяты." width="306" height="507">
           </li>
         </ul>
-        <a class="order-button" href="#">Заказать</a>
         <button class="slider-button slider-button-next" type="button">
           <span class="visually-hidden">Предыдущий слайд.</span>
         </button>
@@ -107,56 +113,64 @@
         </ul>
       </section>
 
-      <section class="bonus">
-        <h2 class="bonus-tittle">Заказывайте мороженое и получайте подарки!</h2>
-        <div class="bonus-raspberry">
-          <h3 class="raspberry-tittle">Малинка даром!</h3>
-          <p>При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="gift-button" href="#">Хочу подарок</a>
-        </div>
-        <div class="bonus-marshmellow">
-          <h3 class="raspberry-tittle">Маршмеллоу даром!</h3>
-          <p>При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
-          <a class="gift-button" href="#">Хочу подарок</a>
+      <section class="bonuses">
+        <h2 class="tittle bonus-tittle">Заказывайте мороженое<br> и получайте подарки!</h2>
+        <div class="content-wrapper bonus">
+          <div class="bonus-wrapper bonus-raspberry">
+            <h3 class="gift-tittle raspberry-tittle">Малинка даром!</h3>
+            <p>При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="gift-button" href="#">Хочу подарок</a>
+          </div>
+          <div class="bonus-wrapper bonus-marshmellow">
+            <h3 class="gift-tittle raspberry-tittle">Маршмеллоу даром!</h3>
+            <p>При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+            <a class="gift-button" href="#">Хочу подарок</a>
+          </div>
         </div>
       </section>
 
       <section class="most-popular">
-        <h2 class="most-popular-tittle">Попробуйте самые популярные вкусы нашего мороженого</h2>
-        <ul class="popular-list">
-          <li class="popular-list-item">
-            <img src="/images/catalog/malinka.jpg" alt="ярко-красный шарик мороженого." width="168" height="168">
-            <h3 class="icecream-name">Малинка</h3>
-            <p>Сливочное мороженое с малиновым джемом</p>
-            <span class="popular-price">310 ₽/кг</span>
-            <button class="add-to-cart" type="button"></button>
-          </li>
-          <li class="popular-list-item">
-            <img src="/images/catalog/pistachio.jpg" alt="Зеленый шарик мороженого с шоколданой крошкой." width="168" height="168">
-            <h3 class="icecream-name">Фисташка</h3>
-            <p>Фисташковый пломбир с кусочками шоколада</p>
-            <span class="popular-price">340 ₽/кг</span>
-            <button class="add-to-cart" type="button"></button>
-          </li>
-          <li class="popular-list-item">
-            <img src="/images/catalog/creme.jpg" alt="Шарик Крем-брюле с прослойкой черничного джема." width="168" height="168">
-            <h3 class="icecream-name">Черника</h3>
-            <p>Крем-брюле с черничным джемом </p>
-            <span class="popular-price">330 ₽/кг</span>
-            <button class="add-to-cart" type="button"></button>
-          </li>
-          <li class="popular-list-item">
-            <img src="/images/catalog/bubble-gum.jpg" alt="Шарик мороженого голубого цвета с разноцветной крошкой." width="168" height="168">
-            <h3 class="icecream-name">Бабл-гам</h3>
-            <p>Ванильный пломбир со сладкой посыпкой</p>
-            <span class="popular-price">320 ₽/кг</span>
-            <button class="add-to-cart" type="button"></button>
-          </li>
-        </ul>
+        <div class="content-wrapper most-popular-wrapper">
+          <h2 class="tittle most-popular-tittle">Попробуйте самые популярные вкусы нашего мороженого</h2>
+          <ul class="popular-list">
+            <li class="popular-list-item">
+              <img src="/images/catalog/malinka.jpg" alt="ярко-красный шарик мороженого." width="168" height="168">
+              <h3 class="icecream-name">Малинка</h3>
+              <p class="icecream-text">Сливочное мороженое с малиновым джемом</p>
+              <span class="popular-price">310 ₽/кг</span>
+              <button class="add-to-cart" type="button"></button>
+            </li>
+            <li class="popular-list-item">
+              <img src="/images/catalog/pistachio.jpg" alt="фисташковое мороженое с шоколадной крошкой." width="168"
+                height="168">
+              <h3 class="icecream-name">Фисташка</h3>
+              <p class="icecream-text">Фисташковый пломбир с кусочками шоколада</p>
+              <span class="popular-price">340 ₽/кг</span>
+              <button class="add-to-cart" type="button"></button>
+            </li>
+            <li class="popular-list-item">
+              <img src="/images/catalog/creme.jpg" alt="Шарик Крем-брюле с прослойкой черничного джема." width="168"
+                height="168">
+              <h3 class="icecream-name">Черника</h3>
+              <p class="icecream-text">Крем-брюле с черничным джемом </p>
+              <span class="popular-price">330 ₽/кг</span>
+              <button class="add-to-cart" type="button"></button>
+            </li>
+            <li class="popular-list-item">
+              <img src="/images/catalog/bubble-gum.jpg" alt="Шарик мороженого голубого цвета с разноцветной крошкой."
+                width="168" height="168">
+              <h3 class="icecream-name">Бабл-гам</h3>
+              <p class="icecream-text">Ванильный пломбир со сладкой посыпкой</p>
+              <span class="popular-price">320 ₽/кг</span>
+              <button class="add-to-cart" type="button"></button>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="advantages">
-        <h2 class="advantages-tittle">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного
+        <h2 class="tittle advantages-tittle">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого
+          собственного
           производства на развес</h2>
         <ul class="advantages-list">
           <li class="agvantages-item advantages-technology">
@@ -180,36 +194,38 @@
       </section>
       <div class="info">
         <div class="blog">
-          <p>Новое в нашем блоге</p>
-          <p>10 способов сервировки фруктовых щербетов к столу</p>
+          <p class="blog-tittle">Новое в нашем блоге</p>
+          <p class="blog-text">10 способов сервировки фруктовых щербетов к столу</p>
         </div>
         <div class="subscribe">
-          <p>Подпишитесь на нашу сладкую рассылку и будьте всегда
+          <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будьте всегда
             в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды.
             Честно =)</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden" for="newsletter-email">Email</label>
             <input class="field" type="email" placeholder="email@example.com" name="newsletter-email"
               id="newsletter-email" required>
-            <button class="button button-newsletter" type="submit">Отправить</button>
+            <button class="red-button button button-newsletter" type="submit">Отправить</button>
           </form>
         </div>
       </div>
       <section class="delivery">
         <div class="delivery-content">
-          <h2>Доставка любимого мороженого на дом</h2>
-          <p>Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на
+          <h2 class="tittle delivery-tittle">Доставка любимого мороженого на дом</h2>
+          <p class="delivery-text">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите
+            доставку мороженого на
             дом, и курьер привезёт вам ваш заказ в течение часа!</p>
         </div>
         <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
-        <span class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</span>
-        <label for="date" class="delivery-label">Дата</label>
-        <input class="delivery-input" id="date">
-        <label for="tel" class="delivery-label">Телефон</label>
-        <input class="delivery-input" id="tel">
-        <label for="address" class="delivery-label">Адрес</label>
-        <input class="delivery-input" id="address">
-        <button class="delivery-form-button" type="submit">Отправить</button>
+          <span class="delivery-form-text">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить
+            заказ.</span>
+          <label for="date" class="delivery-label">Дата</label>
+          <input class="delivery-input" id="date">
+          <label for="tel" class="delivery-label">Телефон</label>
+          <input class="delivery-input" id="tel">
+          <label for="address" class="delivery-label">Адрес</label>
+          <input class="delivery-input" id="address">
+          <button class="red-button delivery-form-button" type="submit">Отправить</button>
         </form>
       </section>
       <section class="feedback">
@@ -219,8 +235,9 @@
             <span class="feedback-tittle">Адрес главного офиса и офлайн-магазина:</span>
             <p class="feedback-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
             <p class="feedback-phone" href="tel:+78128121212">+7 (812) 812-12-12</p>
+            <span>(с 10 до 20 ежедневно)</span>
           </address>
-          <a class="feedback-link" href="#">Форма обратной связи</a>
+          <a class="red-button feedback-link" href="#">Форма обратной связи</a>
         </div>
       </section>
     </main>
@@ -243,13 +260,21 @@
         </li>
       </ul>
       <ul class="footer-about-list">
-        <li class="footer-about-item is-current">Для поставщиков</li>
-        <li class="footer-about-item">Наши документы</li>
-        <li class="footer-about-item">О производстве</li>
-        <li class="footer-about-item">Экологические стандарты</li>
+        <li class="footer-about-item">
+          <a class="footer-about-link is-current">Для поставщиков</a>
+        </li>
+        <li class="footer-about-item">
+          <a class="footer-about-link">Наши документы</a>
+        </li>
+        <li class="footer-about-item">
+          <a class="footer-about-link">О производстве</a>
+        </li>
+        <li class="footer-about-item">
+          <a class="footer-about-link">Экологические стандарты</a>
+        </li>
       </ul>
       <a class="made-by-link" href="https://htmlacademy.ru/ ">
-      <img src="/images/made-by.svg" width="193" height="53" alt="логотип академии.">
+        <img src="/images/made-by.svg" width="193" height="53" alt="логотип академии.">
       </a>
     </footer>
   </body>
